--- a/oblig3_og_4/data_analyse/data_analyse_student.ipynb
+++ b/oblig3_og_4/data_analyse/data_analyse_student.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9ea7496c",
+   "metadata": {},
+   "source": [
+    "### Utforskende data analyse av student performance datasett.\n",
+    "\n",
+    "- I denne filen gjennomfører jeg utforskende data analyse av student performace datasettet, først med hoved hensyn for modellene i oblig3 deretter\n",
+    "gjennomfører jeg videre analyse for modellene i oblig4 der hvor dette er hensiktsmessig. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "id": "05c6e44f",
    "metadata": {},
    "outputs": [],
@@ -11,16 +22,22 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sb\n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder, OneHotEncoder\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Input, Dense\n",
+    "from tensorflow.keras.optimizers import Adam, RMSprop\n",
+    "from scikeras.wrappers import KerasClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "id": "812094a5",
    "metadata": {},
    "outputs": [
@@ -82,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "id": "0a3e0622",
    "metadata": {},
    "outputs": [
@@ -634,7 +651,7 @@
        "max          3.700000     3.510000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "09804b67",
    "metadata": {},
    "outputs": [
@@ -693,7 +710,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c397fb6c",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "id": "dfecb6a5",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1203,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1217,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "id": "1294e4ef",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "id": "47686ceb",
    "metadata": {},
    "outputs": [
@@ -1614,6 +1631,277 @@
     "\n",
     "- For LogisticRegession er det inmidlertid potensielt noe bedre resultat for en PCA kombinasjon med 32 features og hvis vi kun skulle ha jobbet videre med denne modellen vil dette vært hensikts messig å undersøke videre med videre tuneing."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44ba8611",
+   "metadata": {},
+   "source": [
+    "### Oblig 4\n",
+    "\n",
+    "- For videre utforsking av datasettet med hensyn på neural network modellene i oblig4 kommer jeg til gjøre en analyse av forskjellen mellom onehot encoding og label encoding, samt en vurdering om behandling med PCA kan gi bedre resultater. Jeg kommer ikke til å gjøre noen videre analyse med downsamlping da jeg mener dette ikke er hensiktsmessig ut i fra resultatene for dette i oblig3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "17489ea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = OneHotEncoder(sparse_output=False)\n",
+    "df_targets_onehot = encoder.fit_transform(df[['Target']])\n",
+    "\n",
+    "def create_model_label():\n",
+    "    model = Sequential()\n",
+    "    model.add(Input(shape=(36,)))\n",
+    "    model.add(Dense(50, activation='relu'))\n",
+    "    model.add(Dense(15, activation='relu'))\n",
+    "    model.add(Dense(3, activation='softmax'))\n",
+    "    model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "def create_model_onehot():\n",
+    "    model = Sequential()\n",
+    "    model.add(Input(shape=(36,)))\n",
+    "    model.add(Dense(50, activation='relu'))\n",
+    "    model.add(Dense(15, activation='relu'))\n",
+    "    model.add(Dense(3, activation='softmax'))\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "19b5c0e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n",
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n",
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n",
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n",
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.72655367, 0.74350282, 0.71864407, 0.72316384, 0.73076923])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(KerasClassifier(model=create_model_label(), verbose=0), df_features, df_targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "11a05591",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m111/111\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.6019 - loss: 0.9003\n",
+      "\u001b[1m28/28\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m111/111\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.5869 - loss: 0.9176\n",
+      "\u001b[1m28/28\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m111/111\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.6016 - loss: 0.9015\n",
+      "\u001b[1m28/28\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m111/111\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.6027 - loss: 0.8992\n",
+      "\u001b[1m28/28\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hallo\\Documents\\GitHub\\praktisk-maskinlering\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 14 variables whereas the saved optimizer has 2 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m111/111\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.6008 - loss: 0.9067\n",
+      "\u001b[1m28/28\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.70960452, 0.74124294, 0.70056497, 0.70508475, 0.7081448 ])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(KerasClassifier(model=create_model_onehot(), verbose=1), df_features, df_targets_onehot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b1e7825",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416634d8",
+   "metadata": {},
+   "source": [
+    "onehot vs label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "914a77c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9594b6a0",
+   "metadata": {},
+   "source": [
+    "testing av pca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41a39c89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11d604da",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd9ba1b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d44f0de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10f2c0c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad0a024",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d9bfab9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28fa2508",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
