--- a/oblig3_og_4/data_analyse/data_analyse_student.ipynb
+++ b/oblig3_og_4/data_analyse/data_analyse_student.ipynb
@@ -1673,6 +1673,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "3809eb56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       0\n",
+       "1       2\n",
+       "2       0\n",
+       "3       2\n",
+       "4       2\n",
+       "       ..\n",
+       "4419    2\n",
+       "4420    0\n",
+       "4421    0\n",
+       "4422    2\n",
+       "4423    2\n",
+       "Length: 4424, dtype: int64"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_targets"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
    "id": "19b5c0e7",
    "metadata": {},
