--- a/oblig3_og_4/data_analyse/data_analyse_abalone.ipynb
+++ b/oblig3_og_4/data_analyse/data_analyse_abalone.ipynb
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "edbcb0c2",
    "metadata": {},
    "outputs": [
@@ -626,17 +626,17 @@
     }
    ],
    "source": [
-    "print(cross_val_score(RandomForestRegressor(), X=features_pca3, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(RandomForestRegressor(), X=features_pca4, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(RandomForestRegressor(), X=features_pca5, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(RandomForestRegressor(), X=features_pca6, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(RandomForestRegressor(), X=features_pca7, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(RandomForestRegressor(), X=df_features, y=df_targets, cv=5, scoring=\"r2\"))"
+    "print(f'PCA 3 scores: ${cross_val_score(RandomForestRegressor(), X=features_pca3, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 4 scores: ${cross_val_score(RandomForestRegressor(), X=features_pca4, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 5 scores: ${cross_val_score(RandomForestRegressor(), X=features_pca5, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 6 scores: ${cross_val_score(RandomForestRegressor(), X=features_pca6, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 7 scores: ${cross_val_score(RandomForestRegressor(), X=features_pca7, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'Regular scores: ${cross_val_score(RandomForestRegressor(), X=df_features, y=df_targets, cv=5, scoring=\"r2\")}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3167c494",
    "metadata": {},
    "outputs": [
@@ -654,17 +654,17 @@
     }
    ],
    "source": [
-    "print(cross_val_score(Ridge(), X=features_pca3, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Ridge(), X=features_pca4, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Ridge(), X=features_pca5, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Ridge(), X=features_pca6, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Ridge(), X=features_pca7, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Ridge(), X=df_features, y=df_targets, cv=5, scoring=\"r2\"))"
+    "print(f'PCA 3 scores: ${cross_val_score(Ridge(), X=features_pca3, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 4 scores: ${cross_val_score(Ridge(), X=features_pca4, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 5 scores: ${cross_val_score(Ridge(), X=features_pca5, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 6 scores: ${cross_val_score(Ridge(), X=features_pca6, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 7 scores: ${cross_val_score(Ridge(), X=features_pca7, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'Regular scores: ${cross_val_score(Ridge(), X=df_features, y=df_targets, cv=5, scoring=\"r2\")}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c4af01fc",
    "metadata": {},
    "outputs": [
@@ -682,12 +682,12 @@
     }
    ],
    "source": [
-    "print(cross_val_score(Lasso(), X=features_pca3, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Lasso(), X=features_pca4, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Lasso(), X=features_pca5, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Lasso(), X=features_pca6, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Lasso(), X=features_pca7, y=df_targets, cv=5, scoring=\"r2\"))\n",
-    "print(cross_val_score(Lasso(), X=df_features, y=df_targets, cv=5, scoring=\"r2\"))"
+    "print(f'PCA 3 scores: ${cross_val_score(Lasso(), X=features_pca3, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 4 scores: ${cross_val_score(Lasso(), X=features_pca4, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 5 scores: ${cross_val_score(Lasso(), X=features_pca5, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 6 scores: ${cross_val_score(Lasso(), X=features_pca6, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'PCA 7 scores: ${cross_val_score(Lasso(), X=features_pca7, y=df_targets, cv=5, scoring=\"r2\")}')\n",
+    "print(f'Regular scores: ${cross_val_score(Lasso(), X=df_features, y=df_targets, cv=5, scoring=\"r2\")}')"
    ]
   },
   {
