--- a/oblig3_og_4/neural_networks/oblig4_student_performacne.ipynb
+++ b/oblig3_og_4/neural_networks/oblig4_student_performacne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "221c8f5f",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,10 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sb\n",
     "\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler, StandardScaler, OneHotEncoder\n",
-    "from sklearn.model_selection import GridSearchCV, StratifiedKFold, KFold\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
     "from sklearn.metrics import make_scorer, get_scorer\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "\n",
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "21532bea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"..\\oblig3_og_4\\student_performance.csv\", delimiter=\";\")\n"
+    "df = pd.read_csv(r\"..\\..\\oblig3_og_4\\student_performance.csv\", delimiter=\";\")\n"
    ]
   },
   {
