--- a/oblig3_og_4/supervised_learing/abalone_age.ipynb
+++ b/oblig3_og_4/supervised_learing/abalone_age.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"..\\oblig3_og_4\\abalone.data\", sep=\",\", names=[\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\", \"Shell weight\", \"Rings\"])\n",
+    "df = pd.read_csv(r\"..\\..\\oblig3_og_4\\abalone.data\", sep=\",\", names=[\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\", \"Shell weight\", \"Rings\"])\n",
     "df.info()"
    ]
   },
