--- a/oblig3_og_4/supervised_learing/student_performance.ipynb
+++ b/oblig3_og_4/supervised_learing/student_performance.ipynb
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"..\\oblig3_og_4\\student_performance.csv\", delimiter=\";\")\n",
+    "df = pd.read_csv(r\"..\\..\\oblig3_og_4\\student_performance.csv\", delimiter=\";\")\n",
     "df.info()"
    ]
   },
