--- a/oblig3_og_4/neural_networks/oblig_4_abalone_age.ipynb
+++ b/oblig3_og_4/neural_networks/oblig_4_abalone_age.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c00ed039",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"..\\oblig3_og_4\\abalone.data\", sep=\",\", names=[\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\", \"Shell weight\", \"Rings\"])\n",
+    "df = pd.read_csv(r\"..\\..\\oblig3_og_4\\abalone.data\", sep=\",\", names=[\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\", \"Shell weight\", \"Rings\"])\n",
     "df.info()"
    ]
   },
